<resources>
    <string name="app_name">移动观展通</string>
    <string name="phonenum">手机号：</string>
    <string name="password">密\u0020 \u0020 码：</string>
    <string name="yanzhengma">验证码：</string>
    <string name="logintext">登录</string>
    <string name="nexttext">下一步</string>
    <string name="wangjimima">忘记密码？</string>
    <string name="usernamehint">请输入手机号</string>
    <string name="passwordhint">请输入密码</string>
    <string name="pichint">请输入图片内容</string>
    <string name="yanzhengmahint">请输入验证码</string>
    <string name="registtext">注册</string>
    <string name="backtext">返回</string>
    <string name="finshtext">完成</string>
    <string name="getyanzhengma">获取验证码</string>
    <string name="yifasongtext">已发送验证码到</string>
    <string name="registertishitext">请拍名片，快速完成登记</string>
    <string name="nocardtext">无名片</string>
    <string name="newpass">新\u0020 密\u0020码：</string>
    <string name="querenpass">确认密码：</string>
    <string name="newpasshint">请输入新的登录密码</string>
    <string name="querenpasshint">请再次确认登录密码</string>
    <string name="mymessagetext">我的信息</string>
    <string name="myredpackagetext">我的红包</string>
    <string name="mynametext">姓\u0020 \u0020 名：</string>
    <string name="myphototext">头\u0020 \u0020 像：</string>
    <string name="mygsnametext">公司名称：</string>
    <string name="myjobtext">职\u0020 \u0020位：</string>
    <string name="myemailtext">邮\u0020 \u0020箱：</string>
    <string name="myphonenumtext">手机号码</string>
    <string name="myfenleitext">展品分类</string>
    <string name="mymuditext">参展目的</string>
    <string name="mypropertytext">业务性质</string>
    <string name="myareatext">所属地区</string>
    <string name="savetext">保存</string>
    <string name="myouttext">退出登录</string>
    <string name="lingqutext">领取</string>
    <string name="zhanweihaotext">\u0020展\u0020位\u0020号：</string>
    <string name="gspropertytext">公司性质：</string>
    <string name="gsareatext">公司地区：</string>
    <string name="gsprofiletext">公司介绍：</string>
    <string name="phonenumtext">客服电话：</string>
    <string name="exhibitstext">参展展品：</string>
    <string name="exhibitortext">展商人员：</string>
    <string name="barcodeScannerhint">请将条码置于扫描框内</string>
    <string name="toast_barcodeScanner_notSupport">抱歉，您的设备不支持此功能！</string>
    <string name="toast_cameraOpenFailed">打开摄像头失败，请确保其他程序没有占用您的摄像头！</string>
    <string name="scancodetishi">请把二维码放置扫描区，快速加关注</string>
    <string name="scanrecordingtext">历史记录</string>
    <string name="settingtiaojiantext">设置筛选条件</string>
    <string name="daochutext">导出</string>
    <string name="zhanpinnametext">展品名称：</string>
    <string name="zhanpintypetext">展品类型：</string>
    <string name="zhanpindescriptiontext">展品描述：</string>
    <string name="exporttext">请输入您的邮箱：</string>
    <string name="oktext">确认</string>
    <string name="menu_search">查找</string>
    <string name="choose_zhanpinfenlei">请选择您关注的展品分类</string>
    <string name="choose_purpose">请选择您的参展目的</string>
    <string name="choose_property">请选择您的业务性质</string>
    <string name="choose_area">请选择您所属地区</string>
    <string name="enternametext">请输入姓名</string>
    <string name="entergsnametext">请输入公司名称</string>
    <string name="enterjobtext">请输入职位</string>
    <string name="enteremailtext">请输入邮箱</string>
    <string name="settingpasswordtext">请设置登录密码</string>
    <string name="btn_yanzhengnum_text">立即体验</string>
    <string name="btn_lingqu_text">领取</string>
    <string name="miaoshutext">您最想说的话</string>
    <string name="huanyizhangtext">换一张</string>
    <string name="title_activity_message_detail2">MessageDetailActivity2</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
