<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/view">

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/activity_title"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvlayout_phonenum">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/newpass"
                    android:id="@+id/textView" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_newpass"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:hint="@string/newpasshint"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_toEndOf="@+id/textView" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/querenpass"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_querenpass"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:hint="@string/querenpasshint"
                    android:layout_toRightOf="@+id/textView2"
                    android:layout_toEndOf="@+id/textView2" />


        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finshtext"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/btn_finish" />

</LinearLayout>

