<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/view">

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/activity_title"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvlayout_phonenum">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/phonenum"
                    android:id="@+id/textView" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_phonenum"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:hint="@string/usernamehint"
                    android:phoneNumber="true"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_toEndOf="@+id/textView" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvlayout_getphonenum">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/yifasongtext"
                    android:id="@+id/textView1"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13654455555"
                    android:padding="10dp"
                    android:id="@+id/text_getphonenum"
                    android:layout_below="@+id/textView1"
                    android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/yanzhengma"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_code"
                    android:layout_centerVertical="true"
                    android:hint="@string/yanzhengmahint"
                    android:layout_toLeftOf="@+id/btn_yanzhengma"
                    android:layout_toRightOf="@+id/textView2"
                    android:layout_toEndOf="@+id/textView2" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/getyanzhengma"
                    android:id="@+id/btn_yanzhengma"
                    android:layout_alignTop="@+id/edit_password"
                    android:layout_marginLeft="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />


        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nexttext"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/btn_next" />

</LinearLayout>

